Add release target and fix minor bug

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-build/*
-build.*
-output/
-ftpd
 *.3dsx
+*.3dsx.xz
 *.cia
-*.smdh
+*.cia.xz
 *.elf
-*.nso
-*.pfs0
 *.nacp
 *.nro
+*.nro.xz
+*.nso
+*.pfs0
+*.smdh
+build.*/
+ftpd
