Build with ccache

--- a/Makefile.nds
+++ b/Makefile.nds
@@ -52,6 +52,9 @@ CXXFLAGS := $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++17
 ASFLAGS  := -g $(ARCH)
 LDFLAGS   = -specs=ds_arm9.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map) $(OPTIMIZE)
 
+CC  := `which ccache 2>/dev/null` $(CC)
+CXX := `which ccache 2>/dev/null` $(CXX)
+
 #---------------------------------------------------------------------------------
 # any extra libraries we wish to link with the project (order is important)
 #---------------------------------------------------------------------------------
