--- a/Makefile.switch
+++ b/Makefile.switch
@@ -82,6 +82,9 @@ ASFLAGS	:=	-g $(ARCH)
 LDFLAGS	=	-specs=$(DEVKITPRO)/libnx/switch.specs -g $(ARCH) \
 			$(OPTIMIZE) -Wl,-Map,$(notdir $*.map) -Wl,--gc-sections
 
+CC  := `which ccache 2>/dev/null` $(CC)
+CXX := `which ccache 2>/dev/null` $(CXX)
+
 LIBS	:= `$(PREFIX)pkg-config --libs libzstd` -ldeko3dd -lnx
 
 #---------------------------------------------------------------------------------
