--- a/Makefile.i18n
+++ b/Makefile.i18n
@@ -10,7 +10,7 @@ endif
 
 .PHONY: clean-mo
 
-MO_FILES := $(foreach lang,de_DE en_GB en_US es_ES fr_FR it_IT ja_JP nl_NL pt_PT ru_RU zh_CN,$(TOPDIR)/$(ROMFS)/locale/$(lang)/ftpd.mo)
+MO_FILES := $(foreach lang,de_DE en_GB en_US es_ES fr_FR it_IT ja_JP nl_NL pt_PT ru_RU zh_CN zh_TW zh_JP,$(TOPDIR)/$(ROMFS)/locale/$(lang)/ftpd.mo)
 
 $(OUTPUT).nds:  $(MO_FILES)
 $(OUTPUT).3dsx: $(MO_FILES)
