--- a/Makefile.nds
+++ b/Makefile.nds
@@ -35,7 +35,7 @@ NITRO    :=
 # These set the information text in the nds file
 GAME_TITLE     := ftpd classic
 GAME_SUBTITLE1 := v$(VERSION)
-GAME_SUBTITLE2 := (c) 2014-2020 mtheall
+GAME_SUBTITLE2 := (c) 2021 mtheall
 
 #---------------------------------------------------------------------------------
 # options for code generation
