fix APP_TITLE error introduced by 7364ea7dd5258a703c43d5bae4b9709c2c00f1da

--- a/Makefile.switch
+++ b/Makefile.switch
@@ -46,7 +46,7 @@ DATA		:=	data
 INCLUDES	:=	include
 
 ifeq ($(strip $(CLASSIC)),)
-APP_TITLE	:=	ftpd Issue \#139
+APP_TITLE	:=	ftpd pro $(VERSION)
 TARGET		:=	switch/ftpd
 BUILD		:=	switch/build
 SOURCES		+=	source/imgui
