--- a/Makefile.nds
+++ b/Makefile.nds
@@ -35,7 +35,7 @@ NITRO    :=
 # These set the information text in the nds file
 GAME_TITLE     := ftpd classic
 GAME_SUBTITLE1 := v$(VERSION)
-GAME_SUBTITLE2 := (c) 2021 mtheall
+GAME_SUBTITLE2 := (c) 2022 mtheall
 
 #---------------------------------------------------------------------------------
 # options for code generation
@@ -48,7 +48,7 @@ CFLAGS   := -g -Wall $(OPTIMIZE) \
             -DSTATUS_STRING="\"ftpd v$(VERSION)\"" \
             -DIMGUI_DISABLE_INCLUDE_IMCONFIG_H=1 \
             -DNO_IPV6 -DCLASSIC -DFTPDCONFIG="\"/config/ftpd/ftpd.cfg\""
-CXXFLAGS := $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++17
+CXXFLAGS := $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++2a
 ASFLAGS  := -g $(ARCH)
 LDFLAGS   = -specs=ds_arm9.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map) $(OPTIMIZE)
 
